fix overflow-x

--- a/app/scss/Header.scss
+++ b/app/scss/Header.scss
@@ -7,7 +7,7 @@
   .header-wrapper {
     opacity: 0;
     background: red;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-size: cover;
     background-attachment: fixed !important;
